fixing pointer events on collapsed SingleSelect

--- a/src/components/Form/SingleSelect/SingleSelect.scss
+++ b/src/components/Form/SingleSelect/SingleSelect.scss
@@ -52,9 +52,10 @@
     }
   }
   .options {
-    opacity: 1;
-    width: 100%;
     margin-left: 0;
+    opacity: 1;
+    pointer-events: auto;
+    width: 100%;
     @include transition(opacity 0.2s, width 0.2s, margin-left, 0.2s);
   }
 }
@@ -115,6 +116,7 @@
   overflow-y: auto;
   padding: 0;
   position: absolute;
+  pointer-events: none;
   width: 80%;
   z-index: 1;
   @include transition(margin-left 0.2s, opacity 0.2s, width 0.2s);
